0022782: Uninitialized global variable used in conditionals in OpenGl package